@@ -555,8 +555,14 @@ class SkinTemplate extends Skin {
 		# $this->getTitle() will just give Special:Badtitle, which is
 		# not especially useful as a returnto parameter. Use the title
 		# from the request instead, if there was one.
-		$page = Title::newFromURL( $request->getVal( 'title', '' ) );
+		$page = Title::newFromText( $request->getVal( 'title', '' ) );
+
 		$page = $request->getVal( 'returnto', $page );
+
+		// If title or returnto isn't given and the user is allowed to read pages, we try $this->getTitle()
+		if ( $page === null && $this->getUser()->isAllowed( 'read' ) ) {
+			$page = $this->getTitle();
+		}
 		$a = array();
 		if ( strval( $page ) !== '' ) {
 			$a['returnto'] = $page;
